fix: update toast color (dark mode)

--- a/src/global-styles/custom.scss
+++ b/src/global-styles/custom.scss
@@ -32,7 +32,7 @@ html[data-theme="dark"] {
   --bs-gray-900: #212529;
   --bs-primary: #0d6efd;
   --bs-secondary: #6c757d;
-  --bs-success: #198754;
+  --bs-success: #00CD98;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
